style(colors): get some orange color around here

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,7 +41,7 @@
                 </div>
 
                 {{ if .Truncated }}
-                  <p class="readmore"><a href="{{ .RelPermalink }}">Read more…</a></p>
+                  <p class="readmore"><a href="{{ .RelPermalink }}">read more…</a></p>
                 {{ end }}
 
             </section>
